gobmkida/g3/hash_init
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hash_init/src/engine/hash.c:562:1: error: use of undeclared identifier 'qword_A2CC98'
qword_A2CC98[v0] = v5 | ( v6 << 32); 
^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/hash_init/src/obj/1/hash.o] Error 1
